--- a/styles/style.css
+++ b/styles/style.css
@@ -34,5 +34,8 @@ h1, h2 ,h3, form{
     text-align: center;
     text-transform: uppercase;
 
-    background-color: lightblue;
+    background-color: #fff;
+}
+.exit p{
+    margin: 0;
 }
