--- a/styles/style.css
+++ b/styles/style.css
@@ -28,12 +28,15 @@ h1, h2 ,h3, form{
     margin-right: auto;
     margin-bottom: 1rem;
     padding: 1rem 1rem 6rem 1rem;
-    border: 2px solid;
+    border: 2px solid #000;
 
     font-size: 1.5rem;
     text-align: center;
     text-transform: uppercase;
+    letter-spacing: 4px;
+    text-shadow: 1px 0 #000, -1px 0 #000, 0 1px #000, 0px -1px #000;
 
+    color: #fff;
     background-color: #fff;
 }
 .exit p{
