--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,9 @@ h1, h2 ,h3, form{
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 4px;
-    text-shadow: 1px 0 #000, -1px 0 #000, 0 1px #000, 0px -1px #000;
-
+    text-shadow: 
+        1px 0 #000, -1px 0 #000, 0 1px #000, 0px -1px #000, 
+        1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
     color: #fff;
     background-color: #fff;
 }
