--- a/styles/style.css
+++ b/styles/style.css
@@ -19,9 +19,13 @@ h1, h2 ,h3, form{
 /* Utilities */
 .container{
     width: 90%;
+    margin: 0 auto;
 }
 
 /* BEM */
+.main{
+    margin-bottom: 4rem;
+}
 .exit{
     width: 50vw;
     margin-left: auto;
@@ -42,4 +46,13 @@ h1, h2 ,h3, form{
 }
 .exit p{
     margin: 0;
+}
+.flex__section{
+    display: flex;
+    gap: 1rem;
+}
+.colorTest{
+    background-color: coral;
+    padding: 1rem;
+    border: 2px solid #000;
 }
