--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
 5. Miscellaneous property. 
 */
 /* === Global === */
+:root{
+    --shadowText: 
+        1px 0 #000, -1px 0 #000, 0 1px #000, 0px -1px #000, 
+        1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
+}
 *{
     font-family: 'Roboto', sans-serif;
 }
@@ -38,9 +43,7 @@ h1, h2 ,h3, form{
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 4px;
-    text-shadow: 
-        1px 0 #000, -1px 0 #000, 0 1px #000, 0px -1px #000, 
-        1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
+    text-shadow: var(--shadowText);
     color: #fff;
     background-color: #fff;
 }
@@ -50,9 +53,15 @@ h1, h2 ,h3, form{
 .flex__section{
     display: flex;
     gap: 1rem;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .colorTest{
-    background-color: coral;
-    padding: 1rem;
+    min-width: 6rem;
     border: 2px solid #000;
+    padding: 1rem;
+    text-shadow: var(--shadowText);
+    text-align: center;
+    color: #fff;
+    background-color: coral;
 }
