--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,18 @@
 }
 body{
     box-sizing: border-box;
+    min-height: 100vh;
+    background: linear-gradient(red, orange, yellow, green, blue, indigo, violet, red) rgba(0, 0, 0, .5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: darken;
 }
-h1, h2 ,h3, form{
+h1{
+    margin-top: 0;
+    padding-top: 1rem;
+    color: #fff;
+}
+h1, form{
     text-align: center;
 }
 
