--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ h1, form{
     justify-content: center;
     flex-wrap: wrap;
 }
-.colorTest{
+.colorSaved{
     min-width: 6rem;
     border: 2px solid #000;
     padding: 1rem;
